--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer-default">
-    <nav class="container row clearfix">
+    <div class="container">
         <div class="kontakt-block">
             <h4>Контакти</h4>
             <hr>
@@ -19,5 +19,5 @@
                     href="https://www.facebook.com/Inna-Semenets-Designer-2147701515521788/"></a>
             </div>
         </div>
-    </nav>
+    </div>
 </footer>
