--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,14 @@
 <header class="header-block">
   <div class="container">
     <div class="block-image">
-      <a href="/" id="logo" class="hvr-bob" routerLink="home"></a>
+      <a routerLink="/" id="logo" class="hvr-bob" ></a>
     </div>
     <div class="nav-menu">
       <ul>
-        <li><a href="index.html" class="hvr-grow">Головна</a></li>
-        <li><a href="collection.html" class="hvr-grow">Колекцiя</a></li>
-        <li><a href="action.html" class="hvr-grow">Подiї</a></li>
-        <li><a href="reviews.html" class="hvr-grow">Вiдгуки</a></li>
+        <li><a routerLink='/' class="hvr-grow">Головна</a></li>
+        <li><a routerLink='/collection' class="hvr-grow">Колекцiя</a></li>
+        <li><a href="" class="hvr-grow">Подiї</a></li>
+        <li><a href="" class="hvr-grow">Вiдгуки</a></li>
       </ul>
     </div>
   </div>
